--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chartjs-chart-financial": "^0.2.1",
     "chartjs-plugin-zoom": "^2.2.0",
     "countup.js": "^2.9.0",
+    "dotenv": "^17.2.3",
     "dsteem": "^0.11.3",
     "express": "^5.1.0",
     "moment": "^2.30.1",
